fix jump link width

--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -257,5 +257,5 @@ dialog::backdrop {
   padding-top: 0;
   padding-bottom: 0.25em;
   overflow: hidden;
-  width: 6em;
+  width: 5em;
 }
